--- a/RobotLovesKitty.css
+++ b/RobotLovesKitty.css
@@ -1,12 +1,49 @@
-body {
-	background: #42413C;
+* {
 	margin: 0;
+	padding: 0;
+}
+
+html, body {
+	height: 100%;
+	width: 100%;
+}
+
+body {
+	background: #000;
+}
+
+.grow_shrink {
+	top: 40%;
+}
+
+.site_content {
+	border: none;
+	position:absolute;
+	width: 100%;
+	height: 1000px;
 }
 
 #container1 {
+	position: absolute;
 	background: #202B33;
+	height: 100%;
+	width: 80%;
+	margin-left: 10%;
+}
+
+#container2 {
+	position: absolute;
+	background: #42413C;
 	width: 100%;
-	margin: 0;
+	top: 224px;
+	bottom: 0;
+}
+
+#container3 {
+	position: absolute;
+	width: 100%;
+	top: 100%;
+	bottom: 0;
 }
 
 #left-border {
@@ -35,7 +72,6 @@ body {
 	border-radius: 75px;
 	background: #202B33;
 	position: absolute;
-	top: 50%;
 	left: 14%;
 }
 
@@ -45,7 +81,6 @@ body {
 	border-radius: 75px;
 	background: #202B33;
 	position: absolute;
-	top: 50%;
 	left: 35%;
 }
 
@@ -55,7 +90,6 @@ body {
 	border-radius: 75px;
 	background: #202B33;
 	position: absolute;
-	top: 50%;
 	left: 56%;
 }
 
@@ -65,7 +99,6 @@ body {
 	border-radius: 75px;
 	background: #202B33;
 	position: absolute;
-	top: 50%;
 	left: 77%;	
 }
 
