--- a/res/doc/game-showcase.css
+++ b/res/doc/game-showcase.css
@@ -150,8 +150,25 @@ body {
 	display: block;
 	margin: 0 auto;
 }
+#LoD_site {
+	width: 100%;
+	height: 800px;
+}
+#TP_site {
+	width: 100%;
+	height: 800px;
+}
+#UC_site {
+	width: 100%;
+	height: 800px;
+}
 
 p {
 	text-align: center;
 	color: white;
+}
+
+a {
+	text-align: center;
+	color: blue;
 }
